--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,7 +32,8 @@
 
     <hr>
 
-    <p>Need an account? <a href="/signup">Signup</a></p>
+    <p>Need an account? <a href="/signup">Lawyer Signup</a></p>
+    <button onclick="window.location.href='/clientsignup'">Client Sign Up!</button>
     <p>Or go <a href="/">home</a>.</p>
 
 
