--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,6 +17,8 @@
 
         <a href="/login" class="btn btn-default"><span class="fa fa-user"></span>Login</a>
         <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span>Signup</a>
+        <a href="/clientsignup" class="btn btn-default"><span class="fa fa-user"></span>Client Signup</a>
+
 
     </div>
 
