--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,21 +7,33 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="first">
-<div class="container">
 
-    <div class="jumbotron text-center">
-        <h1 class="top"> Radical</h1>
-        <img src="img/diverse.jpg" alt="21 Savage Profile Photo">
+<h1 class="top"> Radical</h1>
 
-        <p>Login or Signup:</p>
+<header class="indexHeader">
+  <nav>
+    <a href="/profile" class="btn btn-default"><span class="fa fa-user"></span>Home</a>
 
-        <a href="/login" class="btn btn-default"><span class="fa fa-user"></span>Login</a>
-        <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span>Signup</a>
-        <a href="/clientsignup" class="btn btn-default"><span class="fa fa-user"></span>Client Signup</a>
+  <section class="logins">
+
+    <a href="/login" class="btn btn-default"><span class="fa fa-user"></span>Login</a>
+    <a href="/signup" class="btn btn-default"><span class="fa fa-user"></span>Client Signup</a>
+    <a href="/clientsignup" class="btn btn-default"><span class="fa fa-user"></span>User Signup</a>
+
+   </section>
+
+  </nav>
+</header>
+
+     <img id="crew" src="img/diverse.jpg" alt="diverse">
+
+      <section  id="hold">
+        <h2>About Us</h2>
+      </section>
+
+<footer></footer>
 
 
-    </div>
 
-</div>
 </body>
 </html>
