--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,8 +32,13 @@
 
     <hr>
 
-    <p>Need an account? <a href="/signup">Lawyer Signup</a></p>
-    <button onclick="window.location.href='/clientsignup'">Client Sign Up!</button>
+    <p>
+      <span>Need an account?</span>
+      <br>
+      <span>If you are a Client<a href="/signup"> Signup Here!</a></span>
+      <br>
+      <span>If you are a User<a href="/clientsignup"> Signup Here!</a></span>
+    </p>
     <p>Or go <a href="/">home</a>.</p>
 
 
