--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -31,30 +31,6 @@
        <input type="text" class="form-control" id="validationCustom022" value="Otto" required>
      </div>
 
-     <div class="form-group">
-       <label for="validationCustomUsername2">Organization or Company</label>
-       <input type="text" class="form-control" id="validationCustomUsername2" aria-describedby="inputGroupPrepend2"
-         required>
-     </div>
-   </div>
-
-   <div class="form-group">
-     <div class="form-group">
-       <label for="validationCustom032">City</label>
-       <input type="text" class="form-control" id="validationCustom032" required>
-     </div>
-
-     <div class="form-group">
-       <label for="validationCustom042">State</label>
-       <input type="text" class="form-control" id="validationCustom042" required>
-     </div>
-
-     <div class="form-group">
-       <label for="validationCustom052">Zip</label>
-       <input type="text" class="form-control" id="validationCustom052" required>
-     </div>
-   </div>
-
    <div class="form-group">
             <label>Email</label>
             <input type="text" class="form-control" name="email">
@@ -62,7 +38,11 @@
         <div class="form-group">
             <label>Password</label>
             <input type="password" class="form-control" name="password">
-    </div>
+          </div>
+          <div class="form-group">
+        <label>Organization</label>
+        <input type="text" class="form-control" name="organization">
+</div>
 
    <div class="form-group">
      <div class="form-check pl-0">
